feat: Enhance AI persona and optimize performance
Refactor AI persona to emphasize "Global Financial Wisdom" and "elite global financial academy." Update system instructions and metadata to reflect this change.

Optimize Gemini model usage by switching to "gemini-3-flash-preview" for faster responses and disabling the thinking budget for lowest latency.

Update frontend elements, including the welcome message and font weights, to align with the refined branding and improve readability. Introduce a language-specific global wisdom phrase for dynamic display.

--- a/index.html
+++ b/index.html
@@ -25,23 +25,27 @@
     <meta property="twitter:description" content="Professional wealth management led by Mr. Koustav Biswas.">
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f8fafc;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
+        /* Overriding serif classes for simplicity and readability as requested */
         .font-serif {
-            font-family: 'Playfair+Display', serif;
+            font-family: 'Inter', sans-serif;
+            font-weight: 800;
         }
         .glass {
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
         }
-        /* Custom scrollbar for institutional feel */
+        /* Custom scrollbar for professional feel */
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
         ::-webkit-scrollbar-track {
             background: #f1f1f1;
